Fix button alignment in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -315,3 +315,8 @@ footer p {
     }
 
 }
+section .button {
+    display: block;
+    width: fit-content;
+    margin: 20px auto;
+}
